third commit after adding auth guard

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -16,7 +16,7 @@
           <p>Choose from a wide variety of services - Infrastructure as a Service (IaaS), Cloud-Native (managed Kubernetes) 
             and Platform as a Service (PaaS) for all compute, networking, storage and database needs of your applications
           </p>
-          <button (click)="loadPricing()" class="btn" id="viewPlans">View Plans</button>
+          <button (click)="loadPricing()" class="btn" id="viewPlans">View Pricing</button>
         </div>
 
         <div class="image">
