--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -22,7 +22,7 @@
               <!-- <li><a routerLinkActive="active" routerLink="/policies">Policies</a></li> -->
               <li><a routerLinkActive="active" routerLink="/contact">Contact Us</a></li>
               <li><a routerLinkActive="active" routerLink="/about">About</a></li>
-              <li><a routerLinkActive="active" routerLink="/login">Logout</a></li>
+              <li><a routerLinkActive="active" routerLink="/login" (click)="logoutAuthGuard()">Logout</a></li>
           </ul>
       </nav>
     </header>
