--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -23,7 +23,9 @@
               <!-- <li><a routerLinkActive="active" routerLink="/policies">Policies</a></li> -->
               <li><a routerLinkActive="active" routerLink="/contact">Contact Us</a></li>
               <li><a routerLinkActive="active" routerLink="/about">About</a></li>
-              <li><a routerLinkActive="active" routerLink="/login" (click)="logoutAuthGuard()">Logout</a></li>
+              <li><a routerLinkActive="active" routerLink="/cart">Cart</a></li>
+              <li><a routerLinkActive="active" routerLink="/profile">Profile</a></li>
+              <!-- <li><a routerLinkActive="active" routerLink="/login" (click)="logoutAuthGuard()">Logout</a></li> -->
           </ul>
       </nav>
     </header>
