--- a/src/app/pricing/pricing.component.html
+++ b/src/app/pricing/pricing.component.html
@@ -56,6 +56,10 @@
             </svg>
             <p>Run any Workload</p>
           </div>
+          <br><br><br>
+          <div class="add-to-cart">
+            <button (click)="addToCart('Droplets',370)">Add To Cart</button>
+          </div>
         </div>
         <!-- Pricing card 1 ends here -->
 
@@ -84,6 +88,10 @@
               <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
             </svg>
             <p>Scale automatically</p>
+          </div>
+
+          <div class="add-to-cart">
+            <button (click)="addToCart('Managed Kuberbetes',740)">Add To Cart</button>
           </div>
         </div>
         <!-- Pricing card 2 ends here -->
@@ -114,6 +122,10 @@
             </svg>
             <p>Highly scalable</p>
           </div>
+
+          <div class="add-to-cart">
+            <button (click)="addToCart('App Platform',0)">Add To Cart</button>
+          </div>
         </div>
         <!-- Pricing card 3 ends here -->
 
@@ -141,7 +153,11 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="rgba(25, 181, 254, 1 )" class="bi bi-check" viewBox="0 0 16 16">
               <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
             </svg>
-            <p>PostgreSQL, MYSQL, and Redis</p>
+            <p>PostgreSQL, MYSQL</p>
+          </div>
+
+          <div class="add-to-cart">
+            <button (click)="addToCart('Managed Databases',1110)">Add To Cart</button>
           </div>
         </div>
         <!-- Pricing card 4 ends here -->
@@ -172,6 +188,10 @@
             </svg>
             <p>Built in CDN</p>
           </div>
+          <br><br><br>
+          <div class="add-to-cart">
+            <button (click)="addToCart('Spaces Object Storage',370)">Add To Cart</button>
+          </div>
         </div>
         <!-- Pricing card 5 ends here -->
 
@@ -200,6 +220,10 @@
               <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
             </svg>
             <p>Easy to scale, resize</p>
+          </div>
+          <br><br><br><br>
+          <div class="add-to-cart">
+            <button (click)="addToCart('Volumes',740)">Add To Cart</button>
           </div>
         </div>
         <!-- Pricing card 6 ends here -->
@@ -230,6 +254,10 @@
             </svg>
             <p>Compatible with our Kuberbetes</p>
           </div>
+
+          <div class="add-to-cart">
+            <button (click)="addToCart('Load Balancers',740)">Add To Cart</button>
+          </div>
         </div>
         <!-- Pricing card 7 ends here -->
 
@@ -258,6 +286,10 @@
               <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
             </svg>
             <p> wide range of HTTP/2 connections</p>
+          </div>
+          <br><br>
+          <div class="add-to-cart">
+            <button (click)="addToCart('Container Registry',0)">Add To Cart</button>
           </div>
         </div>
         <!-- Pricing card 8 ends here -->
